# CRMADOLES

./: .gitignore  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
crm_adoles/: main.py  requirements.txt
crm_adoles/pages/: 1_🗃️ Cadastros.py  2_👦👧 Carometro.py  3_📝 Lista de presença.py  4_📊 Histórico_de_chamadas.py
