[tool.poetry]
name = "crm-adoles"
version = "0.1.0"
description = ""
authors = ["Juliano Oliveira <oliveira.juliano@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.42.0"
boto3 = "^1.36.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
